Fixed wrapping issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -505,7 +505,7 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
+  padding: 40px 0;
   overflow: clip;
 }
 
@@ -632,9 +632,8 @@ section,
   padding: 0;
 }
 
-.about .content ul li {
+.about .content ul li:not(:last-child) {
   margin-bottom: 20px;
-  display: flex;
   align-items: center;
   white-space: nowrap;
 }
@@ -650,8 +649,8 @@ section,
   line-height: 0;
 }
 
-.move-left {
-  margin-left: -100px; /* Adjust the value as needed */
+.about .bottom-paragraph {
+  margin-top: 40px;
 }
 
 /*--------------------------------------------------------------
@@ -669,8 +668,11 @@ section,
 .skills .d-flex img:last-child {
   margin-right: 0;       /* Removes the margin on the last image */
 }
+
 .skills-title {
   font-weight: bold;  /* Makes the text bold */
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .skills .d-flex {
@@ -682,9 +684,8 @@ section,
 --------------------------------------------------------------*/
 .resume .resume-title {
   color: var(--heading-color);
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 700;
-  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -858,56 +859,6 @@ section,
 .contact .info-item:hover i {
   background: var(--accent-color);
   color: var(--contrast-color);
-}
-
-.contact .php-email-form {
-  background-color: var(--surface-color);
-  height: 100%;
-  padding: 30px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 575px) {
-  .contact .php-email-form {
-    padding: 20px;
-  }
-}
-
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
-.contact .php-email-form textarea {
-  font-size: 14px;
-  padding: 10px 15px;
-  box-shadow: none;
-  border-radius: 0;
-  color: var(--default-color);
-  background-color: var(--surface-color);
-  border-color: color-mix(in srgb, var(--default-color), transparent 80%);
-}
-
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
-.contact .php-email-form textarea:focus {
-  border-color: var(--accent-color);
-}
-
-.contact .php-email-form input[type=text]::placeholder,
-.contact .php-email-form input[type=email]::placeholder,
-.contact .php-email-form textarea::placeholder {
-  color: color-mix(in srgb, var(--default-color), transparent 70%);
-}
-
-.contact .php-email-form button[type=submit] {
-  color: var(--contrast-color);
-  background: var(--accent-color);
-  border: 0;
-  padding: 10px 30px;
-  transition: 0.4s;
-  border-radius: 50px;
-}
-
-.contact .php-email-form button[type=submit]:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 25%);
 }
 
 /*--------------------------------------------------------------
